# musicthing-backend

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  Songs Collection  config.json  install.sh  music  musicthing_metadb_init.sql  package-lock.json  run.sh  sqlx-data.json
demo-config/: config.json
src/: config.json  main.rs
src/handlers/: demo.rs  list.rs  mod.rs  play.rs  reload.rs
src/handlers/tag_parser/: mod.rs
src/handlers/utils/: mod.rs
src/utils/: mod.rs
static/: button.js  hello.html
