[package]
name = "musicthing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.4.6"
hyper = { version = "0.14.17", features = ["full"] }
tokio = { version = "1.17.0", features = ["full"] }
tower = "0.4.12"
tower-http = { version = "0.2.3", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version="0.3", features = ["env-filter"] }
sqlx = { version = "0.5.11", features = ["runtime-tokio-rustls", "any", "postgres"] }

serde = "1.0"
serde_json = "1.0"

blake3 = "1.3.1"

id3 = "1.0.2"
metaflac = "0.2.5"
